# OSSfuzz-kit

./: .gitignore  README.md  pyproject.toml
src/ossfuzz_kit/: __init__.py  client.py  config.py  utils.py
src/ossfuzz_kit/cli/: main.py
src/ossfuzz_kit/cli/commands/: list_projects.py  project_info.py
src/ossfuzz_kit/project_info/: __init__.py  list_projects.py  project_details.py
tests/: test_list_projects.py  test_project_details.py  test_utils.py
