[project]
name = "ossfuzz-kit"
version = "0.1.0"
description = ""
authors = [
    {name = "Jones David",email = "redomicmc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ossfuzz_kit", from = "src"}]

[tool.poetry.scripts]
ossfuzz-kit = "ossfuzz_kit.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
